[gd_scene load_steps=23 format=3 uid="uid://c42sugcir7jjr"]

[ext_resource type="PackedScene" uid="uid://b3mj06s0lfkkx" path="res://char_models/GR_subject_203.blend" id="1_ffiwu"]
[ext_resource type="Script" uid="uid://ca1rkro7bfb3o" path="res://Scripts/playerbody.gd" id="2_p1ll0"]

[sub_resource type="BoxShape3D" id="BoxShape3D_p1ll0"]
size = Vector3(0.283, 0.308, 0.286)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8mdu2"]
animation = &"p2000_inspect_rig"
advance_on_start = true

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_56kqu"]
filter_enabled = true
filters = ["rig/Skeleton3D:f_index.01.L", "rig/Skeleton3D:f_index.01.R", "rig/Skeleton3D:f_index.02.L", "rig/Skeleton3D:f_index.02.R", "rig/Skeleton3D:f_index.03.L", "rig/Skeleton3D:f_index.03.R", "rig/Skeleton3D:f_middle.01.L", "rig/Skeleton3D:f_middle.01.R", "rig/Skeleton3D:f_middle.02.L", "rig/Skeleton3D:f_middle.02.R", "rig/Skeleton3D:f_middle.03.L", "rig/Skeleton3D:f_middle.03.R", "rig/Skeleton3D:f_pinky.01.L", "rig/Skeleton3D:f_pinky.01.R", "rig/Skeleton3D:f_pinky.02.L", "rig/Skeleton3D:f_pinky.02.R", "rig/Skeleton3D:f_pinky.03.L", "rig/Skeleton3D:f_pinky.03.R", "rig/Skeleton3D:f_ring.01.L", "rig/Skeleton3D:f_ring.01.R", "rig/Skeleton3D:f_ring.02.L", "rig/Skeleton3D:f_ring.02.R", "rig/Skeleton3D:f_ring.03.L", "rig/Skeleton3D:f_ring.03.R", "rig/Skeleton3D:forearm.L", "rig/Skeleton3D:forearm.R", "rig/Skeleton3D:hand.L", "rig/Skeleton3D:hand.R", "rig/Skeleton3D:palm.01.L", "rig/Skeleton3D:palm.01.R", "rig/Skeleton3D:palm.02.L", "rig/Skeleton3D:palm.02.R", "rig/Skeleton3D:palm.03.L", "rig/Skeleton3D:palm.03.R", "rig/Skeleton3D:palm.04.L", "rig/Skeleton3D:palm.04.R", "rig/Skeleton3D:thumb.01.L", "rig/Skeleton3D:thumb.01.R", "rig/Skeleton3D:thumb.02.L", "rig/Skeleton3D:thumb.02.R", "rig/Skeleton3D:upper_arm.L", "rig/Skeleton3D:upper_arm.R"]

[sub_resource type="AnimationNodeTimeSeek" id="AnimationNodeTimeSeek_p1ll0"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_d6hut"]
animation = &"crouch_idle_rig"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_o0hre"]
animation = &"crouch_walk_foward_rig"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bevmq"]
animation = &"crouch_walk_foward_rig"
play_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3wq3e"]
animation = &"crouch_walk_foward_rig"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6aplb"]
animation = &"crouch_walk_foward_rig"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_8mdu2"]
blend_point_0/node = SubResource("AnimationNodeAnimation_d6hut")
blend_point_0/pos = Vector2(0, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_o0hre")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_bevmq")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_3wq3e")
blend_point_3/pos = Vector2(1, 0)
blend_point_4/node = SubResource("AnimationNodeAnimation_6aplb")
blend_point_4/pos = Vector2(-1, 0)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_p1ll0"]
animation = &"idle_rig"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_frafv"]
animation = &"strafe_left_rig"
play_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rybll"]
animation = &"strafe_left_rig"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ta3ww"]
animation = &"walk_foward_rig"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mqbm8"]
animation = &"walk_foward_rig"
play_mode = 1

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_d6hut"]
blend_point_0/node = SubResource("AnimationNodeAnimation_p1ll0")
blend_point_0/pos = Vector2(0, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_frafv")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_rybll")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_ta3ww")
blend_point_3/pos = Vector2(0, 1)
blend_point_4/node = SubResource("AnimationNodeAnimation_mqbm8")
blend_point_4/pos = Vector2(0, -1)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_56kqu"]
animation = &"kick_rig"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_25lr6"]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_o0hre"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_bevmq"]
nodes/output/position = Vector2(920, 160)
nodes/stand_to_crouch/node = SubResource("AnimationNodeBlend2_o0hre")
nodes/stand_to_crouch/position = Vector2(240, -580)
nodes/idle_to_walk/node = SubResource("AnimationNodeBlendSpace2D_d6hut")
nodes/idle_to_walk/position = Vector2(-160, -540)
nodes/crouch_to_crouchwalk/node = SubResource("AnimationNodeBlendSpace2D_8mdu2")
nodes/crouch_to_crouchwalk/position = Vector2(-160, -300)
nodes/arms_action_blend/node = SubResource("AnimationNodeBlend2_56kqu")
nodes/arms_action_blend/position = Vector2(560, 200)
nodes/arms_action/node = SubResource("AnimationNodeAnimation_8mdu2")
nodes/arms_action/position = Vector2(-100, 460)
nodes/arms_action_timeseek/node = SubResource("AnimationNodeTimeSeek_p1ll0")
nodes/arms_action_timeseek/position = Vector2(140, 440)
nodes/kick_oneshot/node = SubResource("AnimationNodeOneShot_25lr6")
nodes/kick_oneshot/position = Vector2(400, -180)
nodes/kick/node = SubResource("AnimationNodeAnimation_56kqu")
nodes/kick/position = Vector2(71.446106, -56.673176)
node_connections = [&"output", 0, &"arms_action_blend", &"stand_to_crouch", 0, &"idle_to_walk", &"stand_to_crouch", 1, &"crouch_to_crouchwalk", &"arms_action_blend", 0, &"kick_oneshot", &"arms_action_blend", 1, &"arms_action_timeseek", &"arms_action_timeseek", 0, &"arms_action", &"kick_oneshot", 0, &"stand_to_crouch", &"kick_oneshot", 1, &"kick"]

[node name="GR_subject_203" node_paths=PackedStringArray("skeleton", "camera_point", "legs_point", "animation_tree", "head_tracker", "chest_look_at_modi", "upper_chest_look_at_modi", "equip_node", "slot1", "slot2", "slot3", "kick_hitbox") groups=["player_animations"] instance=ExtResource("1_ffiwu")]
script = ExtResource("2_p1ll0")
skeleton = NodePath("rig/Skeleton3D")
camera_point = NodePath("camerapoint")
legs_point = NodePath("legspoint")
animation_tree = NodePath("AnimationTree")
head_tracker = NodePath("rig/Skeleton3D/head_tracker")
chest_look_at_modi = NodePath("rig/Skeleton3D/chest_look_at")
upper_chest_look_at_modi = NodePath("rig/Skeleton3D/upper_chest_look_at")
equip_node = NodePath("rig/Skeleton3D/hand_R/equip_node")
slot1 = NodePath("rig/Skeleton3D/slot1and3/slot_phy")
slot2 = NodePath("rig/Skeleton3D/slot2/slot2_phy")
slot3 = NodePath("rig/Skeleton3D/slot1and3/slot3_phy")
kick_hitbox = NodePath("rig/Skeleton3D/foot_attach/kick_hitbox")

[node name="Skeleton3D" parent="rig" index="0"]
bones/0/position = Vector3(2.5465852e-10, -4.7148205e-09, 9.1677066e-10)
bones/0/rotation = Quaternion(-0.7071068, 0, 0, 0.7071068)
bones/1/position = Vector3(0.003823937, -0.043858226, 0.8053301)
bones/1/rotation = Quaternion(0.7778873, -0.09361248, -0.07424478, 0.6169408)
bones/3/position = Vector3(-0.0017057895, 0.121396385, 0.00010167702)
bones/3/rotation = Quaternion(-0.05071252, 0.088557005, 0.0150812045, 0.9946651)
bones/4/position = Vector3(-0.0018777004, 0.14417382, 0.00028730152)
bones/4/rotation = Quaternion(0.11073563, 0.030140514, 0.00331285, 0.9933873)
bones/4/scale = Vector3(1.0000001, 0.9999999, 1)
bones/5/rotation = Quaternion(0.18760942, -0.0002522146, 4.8237096e-05, 0.9822437)
bones/7/rotation = Quaternion(-0.12052708, -0.00025474533, 3.228206e-05, 0.99271)
bones/9/position = Vector3(0.04796533, 0.06736217, 0.16325401)
bones/10/position = Vector3(-0.048031706, 0.06736192, 0.163254)
bones/20/rotation = Quaternion(0.2906192, 0.51169676, -0.7730348, 0.23690547)
bones/20/scale = Vector3(0.9496621, 0.9496624, 0.9496623)
bones/21/rotation = Quaternion(0.6761145, -0.40900493, -0.20593831, 0.577212)
bones/21/scale = Vector3(1.0530056, 1.053006, 1.0530056)
bones/22/rotation = Quaternion(-0.25218186, -0.4409841, -0.22886516, 0.8303963)
bones/22/scale = Vector3(1.0000001, 1, 1)
bones/23/position = Vector3(-0.0153758135, 0.021682113, -0.0005971156)
bones/23/rotation = Quaternion(0.020094818, 0.36298847, 0.04461963, 0.9305077)
bones/24/position = Vector3(2.638851e-08, 0.047184914, 8.250755e-09)
bones/24/rotation = Quaternion(0.39636657, 0.06968983, -0.05944302, 0.9135116)
bones/24/scale = Vector3(0.99999976, 0.99999905, 0.9999999)
bones/25/rotation = Quaternion(0.54975235, -0.40913728, 0.06120123, 0.7256952)
bones/25/scale = Vector3(1, 1.0000012, 1.0000001)
bones/26/rotation = Quaternion(0.021240659, 0.019082652, 0.022558868, 0.99933773)
bones/27/rotation = Quaternion(-0.08810783, 0.73316145, 0.35482726, 0.5734187)
bones/28/rotation = Quaternion(0.06756903, -0.037005126, -0.012590757, 0.9969486)
bones/30/position = Vector3(-0.005606588, 0.023768073, -0.010433006)
bones/30/rotation = Quaternion(0.00033931388, 0.34454438, 0.011368528, 0.9387012)
bones/31/position = Vector3(-1.5938612e-08, 0.04957028, -2.1686488e-07)
bones/31/rotation = Quaternion(0.44788098, 0.03424389, -0.079539865, 0.88988954)
bones/31/scale = Vector3(0.9999999, 1.0000006, 1.0000002)
bones/32/rotation = Quaternion(0.4602776, -0.16410343, 0.1743641, 0.8548753)
bones/32/scale = Vector3(1, 0.99999934, 0.9999998)
bones/33/rotation = Quaternion(0.08157644, -0.014157887, 0.009818846, 0.99651825)
bones/34/position = Vector3(0.0048248, 0.022190686, -0.017531808)
bones/34/rotation = Quaternion(-0.009191559, 0.30960256, -0.053808074, 0.94929796)
bones/35/position = Vector3(-6.498918e-08, 0.04733163, -8.781601e-09)
bones/35/rotation = Quaternion(0.35718954, 0.028916799, -0.027868226, 0.9331682)
bones/35/scale = Vector3(1.0000002, 1.0000024, 0.99999994)
bones/36/rotation = Quaternion(0.3979706, -0.15332638, 0.048589576, 0.90318847)
bones/36/scale = Vector3(1, 0.9999971, 1.0000004)
bones/37/rotation = Quaternion(0.019738238, -0.02034045, 0.0055757016, 0.9995827)
bones/38/position = Vector3(0.015573446, 0.018898863, -0.02323099)
bones/38/rotation = Quaternion(0.004988208, 0.30457547, -0.12838484, 0.9437829)
bones/39/position = Vector3(7.854316e-08, 0.046253182, 2.375522e-08)
bones/39/rotation = Quaternion(0.4080882, -0.027093198, 0.044442724, 0.91145766)
bones/39/scale = Vector3(1, 0.99999905, 1.0000002)
bones/40/rotation = Quaternion(0.08938902, -0.11934408, 0.050900035, 0.98750997)
bones/40/scale = Vector3(0.9999998, 1.0000031, 1)
bones/41/rotation = Quaternion(0.29513255, -0.0092773605, -0.21974553, 0.9297971)
bones/43/scale = Vector3(0.99999994, 0.99999994, 0.99999976)
bones/45/rotation = Quaternion(0.15702519, -0.53606766, 0.79778826, 0.22695503)
bones/45/scale = Vector3(0.9480846, 0.94808495, 0.9480843)
bones/46/rotation = Quaternion(0.6944128, 0.039629556, -0.4141791, 0.5870912)
bones/46/scale = Vector3(1.0547583, 1.0547589, 1.0547583)
bones/47/rotation = Quaternion(-0.46807754, -0.23244335, 0.11110188, 0.84529865)
bones/47/scale = Vector3(1.0000002, 0.9999996, 0.9999997)
bones/48/position = Vector3(0.011749608, 0.024452291, -0.0027035568)
bones/48/rotation = Quaternion(0.0200938, -0.36298984, -0.04462014, 0.9305072)
bones/49/rotation = Quaternion(0.29525003, -0.066186056, 0.021885239, 0.9528735)
bones/50/rotation = Quaternion(0.36313888, 0.41356838, -0.05894929, 0.8328363)
bones/51/rotation = Quaternion(0.5186417, -0.061801124, 0.23122168, 0.82080936)
bones/52/rotation = Quaternion(-0.0672967, -0.74394447, -0.33524412, 0.57413346)
bones/53/rotation = Quaternion(0.06759468, 0.039037865, 0.012453003, 0.9968712)
bones/54/rotation = Quaternion(0.07090407, -0.00027226013, 0.0013947851, 0.9974822)
bones/55/position = Vector3(0.0019799932, 0.026538325, -0.012539312)
bones/55/rotation = Quaternion(0.00033795278, -0.34454566, -0.0113690905, 0.93870074)
bones/56/rotation = Quaternion(0.50732094, -0.031926934, -0.1965485, 0.83843607)
bones/57/rotation = Quaternion(0.35495332, 0.17977093, 0.0473147, 0.91621614)
bones/58/rotation = Quaternion(0.6621069, 0.0712394, 0.07006004, 0.74271876)
bones/59/position = Vector3(-0.008451084, 0.024960997, -0.0196379)
bones/59/rotation = Quaternion(-0.00919282, -0.30960378, 0.053807497, 0.9492975)
bones/60/rotation = Quaternion(0.52149826, -0.019959968, -0.21384864, 0.82577837)
bones/61/rotation = Quaternion(0.29393765, 0.19575174, 0.030826148, 0.93505716)
bones/62/rotation = Quaternion(0.5943834, 0.027383367, 0.11182665, 0.7958978)
bones/63/position = Vector3(-0.019199427, 0.021669108, -0.02533728)
bones/63/rotation = Quaternion(0.0049868673, -0.3045767, 0.12838438, 0.9437826)
bones/64/rotation = Quaternion(0.22911549, -0.009129101, -0.40149194, 0.88669443)
bones/65/rotation = Quaternion(0.4412775, 0.4401552, 0.2674082, 0.7348677)
bones/66/rotation = Quaternion(0.53583944, 0.033165466, 0.0787381, 0.8399861)
bones/69/rotation = Quaternion(0.060754493, 0.70394546, 0.7050299, -0.060848303)
bones/73/rotation = Quaternion(0.9738712, 0.010883755, -5.4693424e-05, 0.22684038)
bones/73/scale = Vector3(0.9804734, 0.9804729, 0.98047334)
bones/74/rotation = Quaternion(0.16893753, 0.00016126853, -2.7622416e-05, 0.98562676)
bones/74/scale = Vector3(0.99923974, 0.9992399, 0.99923986)
bones/75/rotation = Quaternion(-0.5040228, -0.23511149, -0.098329835, 0.8252362)
bones/75/scale = Vector3(1.0207036, 1.0207038, 1.0207044)
bones/76/rotation = Quaternion(-1.6982181e-05, 0.96888995, -0.24749188, -9.2307135e-07)
bones/76/scale = Vector3(1.0000001, 1.0000004, 1.0000138)
bones/78/rotation = Quaternion(0.99751484, -0.024409836, 0.00039473225, 0.06609234)
bones/78/scale = Vector3(0.98634905, 0.98634875, 0.98634917)
bones/79/rotation = Quaternion(0.101988405, 0.0001627606, -1.6841144e-05, 0.99478567)
bones/79/scale = Vector3(0.9994949, 0.99949515, 0.99949497)
bones/80/rotation = Quaternion(-0.56661594, 0.21212362, 0.046388548, 0.7948572)
bones/80/scale = Vector3(1.0143663, 1.0143664, 1.014367)
bones/81/rotation = Quaternion(1.5403232e-07, 0.9643866, -0.264497, -1.4372937e-06)
bones/81/scale = Vector3(1, 1.0000002, 1.0000138)
bones/83/position = Vector3(0.0876638, 0.05083086, -0.008923065)
bones/83/rotation = Quaternion(-0.82733274, 2.1113715e-06, 8.1671005e-06, 0.5617121)
bones/83/scale = Vector3(1.0000317, 1.0000237, 1.0000035)
bones/84/position = Vector3(-0.0855606, 0.05084102, -0.008924946)
bones/84/rotation = Quaternion(-0.82734257, -3.4635516e-06, 3.6697395e-06, 0.56169766)
bones/84/scale = Vector3(0.999988, 1.0000008, 0.99997556)

[node name="head" parent="rig/Skeleton3D" index="1"]
cast_shadow = 3

[node name="legs_look_at" type="LookAtModifier3D" parent="rig/Skeleton3D" index="2"]
target_node = NodePath("../../../legspoint")
bone_name = "root"
bone = 0
forward_axis = 3
primary_rotation_axis = 2
use_secondary_rotation = false

[node name="chest_look_at" type="LookAtModifier3D" parent="rig/Skeleton3D" index="3"]
target_node = NodePath("../../../camerapoint")
bone_name = "spine.002"
bone = 3
duration = 0.5
transition_type = 10
ease_type = 2
use_angle_limitation = true
symmetry_limitation = true
primary_limit_angle = 0.0
primary_damp_threshold = 0.0
secondary_limit_angle = 0.5235988
secondary_damp_threshold = 0.0

[node name="upper_chest_look_at" type="LookAtModifier3D" parent="rig/Skeleton3D" index="4"]
target_node = NodePath("../../../camerapoint")
bone_name = "spine.003"
bone = 4
origin_offset = Vector3(-0.095, 0.335, 0)
use_angle_limitation = true
symmetry_limitation = true
primary_limit_angle = 1.7453293
primary_damp_threshold = 1.0
secondary_limit_angle = 0.5235988
secondary_damp_threshold = 1.0

[node name="head_look_at" type="LookAtModifier3D" parent="rig/Skeleton3D" index="5"]
target_node = NodePath("../../../camerapoint")
bone_name = "spine.006"
bone = 7
use_angle_limitation = true
symmetry_limitation = true
primary_limit_angle = 0.7140142
primary_damp_threshold = 1.0
secondary_limit_angle = 6.2831855
secondary_damp_threshold = 1.0

[node name="jiggle_phy" type="SpringBoneSimulator3D" parent="rig/Skeleton3D" index="6"]
setting_count = 5
settings/0/root_bone_name = "breast.R"
settings/0/root_bone = 70
settings/0/end_bone_name = "breast.R"
settings/0/end_bone = 70
settings/0/extend_end_bone = true
settings/0/end_bone/direction = 2
settings/0/end_bone/length = 0.19
settings/0/center_from = 0
settings/0/individual_config = false
settings/0/rotation_axis = 3
settings/0/radius/value = 0.02
settings/0/radius/damping_curve = null
settings/0/stiffness/value = 0.5
settings/0/stiffness/damping_curve = null
settings/0/drag/value = 0.01
settings/0/drag/damping_curve = null
settings/0/gravity/value = 0.0
settings/0/gravity/damping_curve = null
settings/0/gravity/direction = Vector3(0, -1, 0)
settings/0/enable_all_child_collisions = true
settings/0/exclude_collision_count = 0
settings/1/root_bone_name = "breast.L"
settings/1/root_bone = 69
settings/1/end_bone_name = "breast.L"
settings/1/end_bone = 69
settings/1/extend_end_bone = true
settings/1/end_bone/direction = 2
settings/1/end_bone/length = 0.19
settings/1/center_from = 0
settings/1/individual_config = false
settings/1/rotation_axis = 3
settings/1/radius/value = 0.02
settings/1/radius/damping_curve = null
settings/1/stiffness/value = 0.5
settings/1/stiffness/damping_curve = null
settings/1/drag/value = 0.01
settings/1/drag/damping_curve = null
settings/1/gravity/value = 0.0
settings/1/gravity/damping_curve = null
settings/1/gravity/direction = Vector3(0, -1, 0)
settings/1/enable_all_child_collisions = true
settings/1/exclude_collision_count = 0
settings/2/root_bone_name = "asscheeks.L"
settings/2/root_bone = 83
settings/2/end_bone_name = "asscheeks.L"
settings/2/end_bone = 83
settings/2/extend_end_bone = true
settings/2/end_bone/direction = 2
settings/2/end_bone/length = 0.19
settings/2/center_from = 0
settings/2/individual_config = false
settings/2/rotation_axis = 3
settings/2/radius/value = 0.05
settings/2/radius/damping_curve = null
settings/2/stiffness/value = 1.0
settings/2/stiffness/damping_curve = null
settings/2/drag/value = 0.1
settings/2/drag/damping_curve = null
settings/2/gravity/value = 0.0
settings/2/gravity/damping_curve = null
settings/2/gravity/direction = Vector3(0, -1, 0)
settings/2/enable_all_child_collisions = true
settings/2/exclude_collision_count = 0
settings/3/root_bone_name = "hand_flaps.L"
settings/3/root_bone = 42
settings/3/end_bone_name = "hand_flaps2.L"
settings/3/end_bone = 43
settings/3/extend_end_bone = false
settings/3/center_from = 0
settings/3/individual_config = false
settings/3/rotation_axis = 3
settings/3/radius/value = 0.02
settings/3/radius/damping_curve = null
settings/3/stiffness/value = 0.1
settings/3/stiffness/damping_curve = null
settings/3/drag/value = 1.0
settings/3/drag/damping_curve = null
settings/3/gravity/value = 0.0
settings/3/gravity/damping_curve = null
settings/3/gravity/direction = Vector3(0, -1, 0)
settings/3/enable_all_child_collisions = true
settings/3/exclude_collision_count = 0
settings/4/root_bone_name = "hand_flaps.R"
settings/4/root_bone = 67
settings/4/end_bone_name = "hand_flaps2.R"
settings/4/end_bone = 68
settings/4/extend_end_bone = false
settings/4/center_from = 0
settings/4/individual_config = false
settings/4/rotation_axis = 3
settings/4/radius/value = 0.02
settings/4/radius/damping_curve = null
settings/4/stiffness/value = 0.1
settings/4/stiffness/damping_curve = null
settings/4/drag/value = 1.0
settings/4/drag/damping_curve = null
settings/4/gravity/value = 0.0
settings/4/gravity/damping_curve = null
settings/4/gravity/direction = Vector3(0, -1, 0)
settings/4/enable_all_child_collisions = true
settings/4/exclude_collision_count = 0

[node name="head_tracker" type="BoneAttachment3D" parent="rig/Skeleton3D" index="7"]
transform = Transform3D(0.9987671, -0.012695402, 0.04799436, 0.025722865, 0.9591956, -0.2815697, -0.042461365, 0.28245705, 0.95833975, 0.0023479674, 1.1687915, 0.027606418)
bone_name = "spine.003"
bone_idx = 4

[node name="hand_R" type="BoneAttachment3D" parent="rig/Skeleton3D" index="8"]
transform = Transform3D(-0.4446971, -0.26431856, 0.8557922, 0.89162844, -0.22143257, 0.39492732, 0.08511379, 0.93867135, 0.33414415, -0.059529334, 1.2020545, 0.31174123)
bone_name = "hand.R"
bone_idx = 47

[node name="equip_node" type="Node3D" parent="rig/Skeleton3D/hand_R" index="0"]
transform = Transform3D(0.49144796, 0.8678512, 0.072892256, 0.23773271, -0.05316227, -0.96987456, -0.8378319, 0.4939719, -0.23244312, 0.013653953, 0.06376625, 0.023726378)

[node name="slot1and3" type="BoneAttachment3D" parent="rig/Skeleton3D" index="9"]
transform = Transform3D(0.9707676, 0.030432634, -0.23808444, 0.0013945936, 0.99119735, 0.132384, 0.24001749, -0.12884615, 0.96217996, -0.00014840928, 1.0258515, 0.046356905)
bone_name = "spine.002"
bone_idx = 3

[node name="slot_phy" type="Node3D" parent="rig/Skeleton3D/slot1and3" index="0"]
transform = Transform3D(0.5762872, 0.750469, -0.32355705, 0.19022135, 0.2618617, 0.9461735, 0.7948011, -0.6068153, 0.0081522465, 0.070211306, -0.02217349, 0.0684171)

[node name="slot3_phy" type="Node3D" parent="rig/Skeleton3D/slot1and3" index="1"]
transform = Transform3D(0.8932229, 0.38950992, 0.22457755, -0.33319622, 0.2380831, 0.912303, 0.3018829, -0.88971823, 0.3424445, -0.08637663, -0.008573074, -0.00025065907)

[node name="slot2" type="BoneAttachment3D" parent="rig/Skeleton3D" index="10"]
transform = Transform3D(0.95160747, -0.03297738, 0.23384616, 0.022707576, -0.9535911, -0.22688277, 0.2350657, 0.22561888, -0.9247532, 0.074171655, 0.8726653, 0.08617811)
bone_name = "thigh.L"
bone_idx = 73

[node name="slot2_phy" type="Node3D" parent="rig/Skeleton3D/slot2" index="0"]
transform = Transform3D(0.9998932, 0.011337607, 0.009235411, 0.010267451, -0.09463047, -0.9954595, -0.01041218, 0.99544793, -0.09473677, 0.085945904, 0.1603946, 2.4447218e-09)

[node name="foot_attach" type="BoneAttachment3D" parent="rig/Skeleton3D" index="11"]
transform = Transform3D(0.7832973, -0.5050502, 0.36248818, 0.0030018613, -0.58001614, -0.8146169, 0.6216624, 0.63916636, -0.4528031, -0.08088149, 0.06712207, -0.113561004)
bone_name = "foot.R"
bone_idx = 80

[node name="kick_hitbox" type="Area3D" parent="rig/Skeleton3D/foot_attach" index="0"]
transform = Transform3D(1, 0, 0, 0, 0.86349237, 0.50436187, 0, -0.50436187, 0.86349237, 0, 0, 0)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="rig/Skeleton3D/foot_attach/kick_hitbox" index="0"]
transform = Transform3D(0.9999999, 3.2782555e-07, 1.7508864e-07, 2.9802322e-07, 0.999998, -1.15484e-07, 1.3038516e-07, -3.7252903e-09, 0.99999857, 6.404519e-05, 0.06901077, 0.076113075)
shape = SubResource("BoxShape3D_p1ll0")

[node name="AnimationTree" type="AnimationTree" parent="." index="2"]
tree_root = SubResource("AnimationNodeBlendTree_bevmq")
anim_player = NodePath("../AnimationPlayer")
parameters/stand_to_crouch/blend_amount = 0.0
parameters/idle_to_walk/blend_position = Vector2(0.0015772581, 0.004484296)
parameters/crouch_to_crouchwalk/blend_position = Vector2(0, 0)
parameters/arms_action_blend/blend_amount = 1.0
parameters/arms_action_timeseek/seek_request = -1.0
parameters/kick_oneshot/active = false
parameters/kick_oneshot/internal_active = false
parameters/kick_oneshot/request = 0

[node name="camerapoint" type="Node3D" parent="." index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0443248, 1.5150738)

[node name="legspoint" type="Node3D" parent="." index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5)

[connection signal="body_entered" from="rig/Skeleton3D/foot_attach/kick_hitbox" to="." method="_on_kick_hitbox_body_entered"]
